# Pomodoro-for-archlinux-hyprland

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  utils.rs
src/audio/: brown_noise.rs  detector.rs  mod.rs
src/config/: settings.rs
src/timer/: pomodoro.rs
src/ui/: mod.rs  video_overlay.rs  widget.rs
